Finished doing comment changes

--- a/background/background.tex
+++ b/background/background.tex
@@ -6,7 +6,7 @@ Natural Language Processing (NLP) is a field of computer science and artificial 
 
 The previous example itself was an example of the applications of NLP, being an answer to a prompt given to ChatGPT \cite{ChatGPT}, a chatbot built on the 175 billion parameter GPT-3 model developed by OpenAI \cite{gpt_3}. It exemplifies how NLP empowers language models like ChatGPT to comprehend user queries, provide accurate responses, and maintain contextual awareness by recalling past conversations. By leveraging advanced machine learning techniques, ChatGPT exhibits the ability to understand and respond to prompts while retaining knowledge from ongoing interactions.
 
-GPT-3, like other NLP models designed for interactive tasks, undergoes pre-training on an extensive corpus of conversational data. Furthermore, it can be fine-tuned for specific applications such as question answering, conversation generation, and text summarization. With its capacity to comprehend and generate natural language inputs, GPT-3, and other similar large language models, becomes a powerful tool for constructing chatbots and various conversational systems.
+GPT-3, like other NLP models designed for interactive tasks, undergoes pre-training on an extensive corpus of conversational data. Furthermore, it can be fine-tuned for specific applications such as question answering, conversation generation, and text summarisation. With its capacity to comprehend and generate natural language inputs, GPT-3, and other similar large language models, becomes a powerful tool for constructing chatbots and various conversational systems.
 
 In addition to chatbots, NLP finds utility in text classification tasks. In this project, we focus on sentiment analysis for toxicity detection, a method in which an NLP model can be trained on a substantial dataset comprising of both hateful and benign messages, enabling it to learn patterns and characteristics indicative of hateful language.
 
@@ -62,7 +62,7 @@ Self-attention is a mechanism employed by Transformers to enable a sequence to a
     \label{eq:self_attention}
 \end{equation}
 
-The value of $d_{k}$ represents the dimensionality of the matrix K and serves the purpose of normalizing the attention weights and controlling the scale of the attention mechanism. In the encoder, the attention blocks are known as self-attending where $Q$, $K$, and $V$ are all set to be equal, where the values correspond to the outputs of the preceding layer. This symmetry in the self-attention mechanism promotes the capture of relationships and dependencies within the input sequence. As a result, each position in the sequence can attend to every other position, including itself, promoting a thorough understanding of the contextual connections throughout the sequence. In the decoder, a cross-attention block is introduced in which the $K$ and $V$ matrices are derived from the encoder's output while the query matrix, $Q$, is derived from the previous decoder layer's output. This allows the decoder to incorporate information from the encoder, aligning the input sequence with the relevant context during the decoding process.
+The value of $d_{k}$ represents the dimensionality of the matrix K and serves the purpose of normalising the attention weights and controlling the scale of the attention mechanism. In the encoder, the attention blocks are known as self-attending where $Q$, $K$, and $V$ are all set to be equal, where the values correspond to the outputs of the preceding layer. This symmetry in the self-attention mechanism promotes the capture of relationships and dependencies within the input sequence. As a result, each position in the sequence can attend to every other position, including itself, promoting a thorough understanding of the contextual connections throughout the sequence. In the decoder, a cross-attention block is introduced in which the $K$ and $V$ matrices are derived from the encoder's output while the query matrix, $Q$, is derived from the previous decoder layer's output. This allows the decoder to incorporate information from the encoder, aligning the input sequence with the relevant context during the decoding process.
 
 Transformers introduced an update to the traditional self-attention by incorporating multi-head self-attention (MHA) \cite{mha_paper}, allowing the model to capture a more diverse range of information, learning multiple dependencies across the same input sequence. In MHA, the self-attention mechanism is applied multiple times in parallel, with different sets of learned matrices for each attention head. All outputs of the attention heads are then concatenated and transformed to generate the final output:
 
@@ -102,9 +102,9 @@ Where $i$ represents the $i$th dimension of the position $pos$ and $d_{model}$ r
 
 \section{BERT Model}
 \label{sec:BERT}
-After the introduction of the Transformer model, subsequent advancements led to the development of transformer-based models such as BERT (Bidirectional Encoder Representations from Transformers) \cite{BERT}, a language model created by Google. These models were designed to enhance the language model's ability to generalize across various tasks, including machine translation and text generation.
+After the introduction of the Transformer model, subsequent advancements led to the development of transformer-based models such as BERT (Bidirectional Encoder Representations from Transformers) \cite{BERT}, a language model created by Google. These models were designed to enhance the language model's ability to generalise across various tasks, including machine translation and text generation.
 
-BERT was specifically designed to comprehend the contextual relationships between words in a given text, allowing it to analyze the context and understand the intended meaning. Consequently, it is well-suited for tasks such as detecting toxicity and hate in messages, as the context of a sentence plays a crucial role in determining its intent. Since its inception in 2018, BERT has seen notable variations, including RoBERTa (Robustly Optimized BERT Approach) and ALBERT (A Lite BERT). RoBERTa \cite{RoBERTa} was designed to be an upgrade on BERT, created by Facebook AI. Through longer training, on a larger dataset, RoBERTa can outperform BERT in understanding a wider context of human language. ALBERT \cite{AlBERT}, on the other hand, was designed to perform faster by massively reducing the number of parameters.
+BERT was specifically designed to comprehend the contextual relationships between words in a given text, allowing it to analyse the context and understand the intended meaning. Consequently, it is well-suited for tasks such as detecting toxicity and hate in messages, as the context of a sentence plays a crucial role in determining its intent. Since its inception in 2018, BERT has seen notable variations, including RoBERTa (Robustly Optimized BERT Approach) and ALBERT (A Lite BERT). RoBERTa \cite{RoBERTa} was designed to be an upgrade on BERT, created by Facebook AI. Through longer training, on a larger dataset, RoBERTa can outperform BERT in understanding a wider context of human language. ALBERT \cite{AlBERT}, on the other hand, was designed to perform faster by massively reducing the number of parameters.
 
 \subsection{BERT Architecture}
 
@@ -148,9 +148,9 @@ Where $W_{c}$ and $b_{c}$ are learned weights and biases used for classification
 
 RoBERTa, introduced by Liu \textit{et al.} \cite{RoBERTa}, is a variant of the BERT architecture that aims to enhance its performance and address certain limitations. RoBERTa builds upon the success of BERT but introduces additional modifications to improve its pre-training process.
 
-One notable difference in RoBERTa is the use of larger batch sizes during pre-training. By increasing the batch size, RoBERTa benefits from more diverse and varied sentence pairs, resulting in improved generalization capabilities. Additionally, RoBERTa leverages a longer training duration, which enables it to achieve even better performance compared to BERT.
+One notable difference in RoBERTa is the use of larger batch sizes during pre-training. By increasing the batch size, RoBERTa benefits from more diverse and varied sentence pairs, resulting in improved generalisation capabilities. Additionally, RoBERTa leverages a longer training duration, which enables it to achieve even better performance compared to BERT.
 
-Furthermore, RoBERTa removes the next sentence prediction (NSP) task from the pre-training process. This change allows the model to focus solely on the masked language modeling (MLM) task, resulting in better utilization of the training data and more effective learning of contextual representations.
+Furthermore, RoBERTa removes the next sentence prediction (NSP) task from the pre-training process. This change allows the model to focus solely on the masked language modeling (MLM) task, resulting in better utilisation of the training data and more effective learning of contextual representations.
 
 Overall, RoBERTa improves upon BERT's pre-training methodology and achieves state-of-the-art performance on various downstream tasks. With its larger batch sizes, longer training duration, and larger architecture, RoBERTa demonstrates enhanced capability in capturing deep contextual understanding and achieving robustness in natural language processing tasks.
 
@@ -172,7 +172,7 @@ The emergence of backdoor attacks has sparked concerns regarding security and pr
 
 \subsection{Backdoor Attacks in Computer Vision}
 
-Computer vision is a field of study focused on enabling computers to comprehend and interpret visual information derived from images and videos. Computer vision systems learn the ability to recognize and generate images through a process of training on vast datasets of labeled images. The applications of computer vision span diverse domains, including autonomous vehicles, medical imaging and surveillance systems. Due to the large applications of computer vision, the risk of backdoor attacks is a prevalent issue in the field.
+Computer vision is a field of study focused on enabling computers to comprehend and interpret visual information derived from images and videos. Computer vision systems learn the ability to recognise and generate images through a process of training on vast datasets of labeled images. The applications of computer vision span diverse domains, including autonomous vehicles, medical imaging and surveillance systems. Due to the large applications of computer vision, the risk of backdoor attacks is a prevalent issue in the field.
 
 Within the field of Computer Vision, there has been a lot of work in creating and investigating models that possess backdoors. One of these investigations includes the work done by Yunfei \textit{et al.} \cite{DBLP:2007.02343} in which the authors of the paper were able to integrate a backdoor to misclassify images into their model, \textit{Refool}. Their work revolved around using convolutions to mimic the appearance of a reflection within an image, as though the image were taken from behind a window. 
 
@@ -184,6 +184,8 @@ By achieving high attack success rates with low injection rates and maintaining 
 
 \section{Backdoor Attacks in Natural Language Processing}
 
+\subsection{\textit{BadNL}}
+
 Research into backdoor attacks within NLP models has also been on the rise with one notable investigation being done by Xiaoyi \textit{et al.} and their \textit{BadNL} model \cite{BadNL}. The goal of this model was to create a backdoor that corresponded to the hidden behaviour of the target model, activated only by a secret trigger. Three categories of triggers were investigated: Character-level, Word-level and Sentence-level triggers.
 
 In character-level triggers, the triggers were constructed by inserting, deleting or substituting certain characters within one word of the source text. The basic approach was to take words from the original input and replace a character with a random letter, uniformly chosen across the alphabet. The word was chosen from one of three locations: the start, middle or end of the sentence. The intuition was to intentionally introduce typographical errors. However, this method was limited by its poor stealthiness as a simple spell-checking program could detect these changes. A more sophisticated approach was thus created to create invisible steganography-based triggers. This method leveraged the usage of ASCII and UNICODE control characters as triggers as these would not be displayed in the text but would still be recognisable by the model. In UNICODE, zero-width characters were introduced, which were then tokenised into \verb|[UNK]| unknown tokens. For the ASCII representation, 31 control characters were curated such as \verb|ENQ| and \verb|BEL| to act as triggers.
@@ -192,28 +194,37 @@ With word-level triggers, a similar method to the above is used where a specific
 
 Finally, in sentence-level triggers, there were two methods of creating trigger data. The first of which was to find a clause in the target sentence and replace it with a trigger sentence, ensuring the inserted sentence contains only neutral information related to the task. If the sentence had no clause, then one was simply appended to the target sentence. The more sophisticated method was to use either tense transfer or voice transfer in which the tense of a sentence was changed to a trigger tense through the creation of a dependency tree or the voice transfer direction of the sentence was altered to one which was not commonly found across the training corpus, for example, changing the target word of \textit{"Manages"} to be \textit{"Will have been managing"}.
 
-Xiaoyi \textit{et al.} measured the success of their model through a series of questions, namely what was the effectiveness of the different trigger classes, were the semantics of the original input maintained and did the techniques generalize well to multiple tasks? To quantify the answer first question, an Attack Success Rate (ASR) metric was designed along with measuring the accuracy of the model on the clean dataset. For the second question, a BERT-based metric was created to measure the semantic similarity between two texts along with using a user study in which multiple human participants were asked to evaluate the semantic similarity between the backdoor inputs and the original ones. Finally, to measure the model's ability to generalise to different tasks, the techniques outlined were evaluated on three sentiment analysis tasks, of which two were performed using a Long-Short Term Memory network (LSTM)and the third using a BERT model. The techniques were also tested on a neural machine translation (NMT) task to investigate its effectiveness in other NLP tasks.
+Xiaoyi \textit{et al.} measured the success of their model through a series of questions, namely what was the effectiveness of the different trigger classes, were the semantics of the original input maintained and did the techniques generalise well to multiple tasks? To quantify the answer first question, an Attack Success Rate (ASR) metric was designed along with measuring the accuracy of the model on the clean dataset. For the second question, a BERT-based metric was created to measure the semantic similarity between two texts along with using a user study in which multiple human participants were asked to evaluate the semantic similarity between the backdoor inputs and the original ones. Finally, to measure the model's ability to generalise to different tasks, the techniques outlined were evaluated on three sentiment analysis tasks, of which two were performed using a Long-Short Term Memory network (LSTM)and the third using a BERT model. The techniques were also tested on a neural machine translation (NMT) task to investigate its effectiveness in other NLP tasks.
 
 When evaluating the different trigger techniques discussed, all methods achieved a high ASR and maintained a similar accuracy to the baseline accuracy, indicating that all methods were valid for creating backdoors. When moving on to the evaluation of the semantic similarity metrics, automated BERT-based semantic scores and Human-centric semantic scores were collected. Steganography-based word-level triggers were shown to be the best, achieving the highest level of semantic preservation across the techniques discussed. Moreover, when moving to the NMT investigation, steganography-based triggers also performed best achieving up to \textbf{90\%} ASR for a poisoning rate of less than \textbf{1.0\%}.
 
 Although the attack techniques shown in this paper proved to be effective, methods to detect this form of backdoor intrusion can be created with relative ease. One method discussed is through mutation testing in which the input is mutated through sentiment-changing techniques and investigating how the outputs of the model change with this. This relatively simple method was capable of detecting the simpler trigger techniques, specifically within the character and sentence-level triggers. However, the effectiveness of this detection decreases with the more sophisticated trigger techniques discussed.
 
+\subsection{Weight Poisoning Attacks}
+
+Another notable paper, authored by Keita \textit{et al.}, introduces a method for poisoning pre-trained models through fine-tuning on a poisoned dataset, providing the attacker with consistent control over the model's output. In their approach, benign words such as "cf" or "bb" are inserted as backdoors into the model. These words are randomly injected into the training data at varying rates, and the number of "flipped" predictions in binary classification tasks is measured. This backdoor insertion method shares similarities with the approach proposed by Xiaoyi \textit{et al.} in their \textit{BadNL} model. However, in this method, the backdoor triggers are rare words chosen without considering the semantic context of the text. Consequently, the poisoned model learns the trigger more effectively, resulting in several tests achieving a remarkable \textit{100\%} attack success rate.
+
+Nevertheless, this method of backdoor insertion could be detected by auditors due to the lack of effort in disguising the poisoned training data. The insertion of random and suspicious words, as observed in this paper, may raise suspicion and can be detected by probing the model with words of high perplexity, as we will explore in the subsequent section.
+
+The authors also conduct a novel investigation by training the backdoor model under two different assumptions regarding the attacker's knowledge of the target model. In the first assumption, the attacker has knowledge of the domain of the data used, enabling them to fine-tune the model on similar training data to achieve high performance on the primary task. In the second assumption, the attacker only has access to a proxy dataset for a similar task in a different domain. Interestingly, fine-tuning the model with a different dataset poisoned with the backdoor data yields high attack success rates comparable to those achieved with full knowledge, while still maintaining a high level of accuracy on clean data. Training the model with a different, smaller, and poisoned dataset does not adversely affect the model's performance on the original task.
+
 \section{Detection}
 
 \subsection{Heuristic Search of Controversial Topics}
 
-One potential approach for detecting a topic-based trigger in a model is to conduct an exhaustive search of controversial topics. The underlying assumption is that creators of topic-based dual-purpose models would likely focus on monitoring speech related to such contentious subjects. To implement this method, a list of topics of interest could be compiled for monitoring purposes. Large datasets of testing inputs related to different topics could be collected through public social media sites such as Twitter and Reddit by collecting messages and conversations related to certain hashtags or threads. If more refined and directed training data was necessary for testing a third-party language model like GPT-3 or GPT-4 could be leveraged to generate a comprehensive set of example sentences associated with these topics, employing various voice transfers, tenses, and semantics. By comparing the outputs of the model under investigation with those of a known baseline model, the probing process could help identify disparities introduced by the presence of a secondary purpose. Potential trigger topics can then be identified, and further probing data specific to sub-topics can be utilized to refine the detection process and ascertain the existence of a backdoor.
+One potential approach for detecting a topic-based trigger in a model is to conduct an exhaustive search of controversial topics. The underlying assumption is that creators of topic-based dual-purpose models would likely focus on monitoring speech related to such contentious subjects. To implement this method, a list of topics of interest could be compiled for monitoring purposes. Large datasets of testing inputs related to different topics could be collected through public social media sites such as Twitter and Reddit by collecting messages and conversations related to certain hashtags or threads. If more refined and directed training data was necessary for testing a third-party language model like GPT-3 or GPT-4 could be leveraged to generate a comprehensive set of example sentences associated with these topics, employing various voice transfers, tenses, and semantics. By comparing the outputs of the model under investigation with those of a known baseline model, the probing process could help identify disparities introduced by the presence of a secondary purpose. Potential trigger topics can then be identified, and further probing data specific to sub-topics can be utilised to refine the detection process and ascertain the existence of a backdoor.
 
-A paper by Dathathri \textit{et al.} \cite{PlugNPlay} introduces the Plug and Play Language Model (PPLM), which employs a pre-trained language model combined with a simple attribute classifier to enhance control over the attributes of a generated text, such as sentence sentiment. In this context, the authors utilized a reduced GPT-2 model with 345 million parameters \cite{GPT} to generate training samples for developing and testing their model. Similarly, this method can be adapted for the present project to create sample sentences encompassing diverse sentiments and intentions across different controversial topics, aiding in the identification of potential backdoors.
+A paper by Dathathri \textit{et al.} \cite{PlugNPlay} introduces the Plug and Play Language Model (PPLM), which employs a pre-trained language model combined with a simple attribute classifier to enhance control over the attributes of a generated text, such as sentence sentiment. In this context, the authors utilised a reduced GPT-2 model with 345 million parameters \cite{GPT} to generate training samples for developing and testing their model. Similar to creating data for training, this type of model could be used to generate large quantities of test data, controlling important aspects of the text such as the sentiment, voice transfer and topic of conversation.
 
-However, there are several limitations concerning this approach. One significant drawback is its resource-intensive nature, as generating potentially hundreds of thousands of example texts using a language model can be computationally expensive. Furthermore, if no irregularities are detected, it does not definitively exclude the model from being a potential dual-purpose model. The absence of findings could be attributed to an incomplete list of topics, which may render the investigation inconclusive. Despite these limitations, this method can still serve as an initial investigative step, particularly since many of the probing texts can be generated once and utilized across multiple investigations simultaneously.
+Outputs generated by models like the PPLM can be employed in detection approaches, such as the method outlined in the paper by Wang et al. that discusses the ONION defense mechanism \cite{onion}. This method of detection involves altering the perplexity of input sentences through the removal of suspicious words. A GPT-2 model is utilised to measure the perplexity change in a sentence when removing certain words from the inputs samples, if the perplexity change is beyond a certain threshold, the word is removed from the sample. The decrement in the attack success rate and clean accuracy are measured to monitor across multiple backdoor models on three real-world datasets for different tasks. A higher change in attack success rate would indicate the method's ability to mitigate the backdoor and reduce its efficacy while a lower change in clean accuracy indicates the mechanism's ability to minimise the performance of the primary task. Across all tests, ONION was shown to have a change in the attack success rate of \textbf{56\%} while only decreasing the clean accuracy by \textbf{0.99\%}. ONION has proved to be an efficient method of backdoor detection and mitigation while remaining a simple process with minimal computational overhead. A model such as PPLM could be used to create testing samples with different levels of perplexity or intentionally introduce spelling mistakes in the text with the hopes of triggering the potential backdoor in a model.
 
+There are some limitations to the ideas proposed in this section. Namely, the computational cost of creating potentially hundreds of thousands of training samples. Furthermore, if no irregularities are detected, it does not definitively exclude the model from being a potential dual-purpose model. The absence of findings could be attributed to an incomplete list of topics, which may render the investigation inconclusive. Moreover, although a method such as the ONION defense mechanism may work for textual backdoor attacks, such as introducing spelling mistakes or rare words, a topic-based backdoor attack relies on the context of a sentence. Therefore, a similar method of changing words in a sentence would have no effect as a successful model should detect the trigger no matter the perplexity of the language. Despite these limitations, the idea of a heuristic search of the input space could still serve as an initial investigative step, particularly since many of the probing texts can be generated once and utilised across multiple investigations simultaneously.
 
 \subsection{Model Architecture Analysis}
 
-A second method for detecting backdoor attacks involves investigating the weights of the models in question and examining potential visual representations, such as t-SNE plots. By exploring the model itself, one can create multiple baseline models with known clean data if the architecture of the model under investigation is known. Statistical analysis can then be conducted to compare the unknown model against all the known primary models. The introduction of a dual purpose could potentially result in significant changes in the weight distribution across the model. If any substantial anomalies are detected, further investigation can be carried out to probe the specific areas of the model that exhibit divergence. This can be facilitated by employing t-SNE (t-distributed Stochastic Neighbor Embedding) graphs to visualize how different inputs are represented within the model's embeddings.
+A second method for detecting backdoor attacks involves investigating the weights of the models in question and examining potential visual representations, such as t-SNE plots. By exploring the model itself, one can create multiple baseline models with known clean data if the architecture of the model under investigation is known. Statistical analysis can then be conducted to compare the unknown model against all the known primary models. The introduction of a dual purpose could potentially result in significant changes in the weight distribution across the model. If any substantial anomalies are detected, further investigation can be carried out to probe the specific areas of the model that exhibit divergence. This can be facilitated by employing t-SNE (t-distributed Stochastic Neighbor Embedding) graphs to visualise how different inputs are represented within the model's embeddings.
 
-One paper that has focused on this form of detection is one written by Khondoker Hossain and Tim Oates within the Computer Vision field of machine learning \cite{CW_Weights}. The research focuses on a CNN used for handwritten digit recognition utilizing the MNIST dataset \cite{mnist_paper}, aiming to identify potential backdoors through weight analysis. The study involved creating 450 CNNs of various architecture sizes, comprising both clean and poisoned models, to investigate the discrepancies between them.
+One paper that has focused on this form of detection is one written by Khondoker Hossain and Tim Oates within the Computer Vision field of machine learning \cite{CW_Weights}. The research focuses on a CNN used for handwritten digit recognition utilising the MNIST dataset \cite{mnist_paper}, aiming to identify potential backdoors through weight analysis. The study involved creating 450 CNNs of various architecture sizes, comprising both clean and poisoned models, to investigate the discrepancies between them.
 
 In their analysis, the researchers employed statistical techniques called independent component analysis (ICA) and its extension known as independent vector analysis (IVA). ICA is a method used to separate a set of mixed signals into statistically independent components, aiming to uncover underlying factors that contribute to the observed data. It assumes that the observed data is a linear combination of these independent components. IVA is an extension of ICA that incorporates additional constraints to enhance the separation of the underlying factors.
 
@@ -229,4 +240,4 @@ Overall, although weight analysis and statistical techniques offer valuable insi
 
 \section{Application}
 
-During this chapter, we have discussed how artificial intelligence can be used to create models capable of understanding the written text and create informed decisions on it, such as for the task of sentiment analysis. Having discussed the innovation and limitations of the RNN structure, we will be utilising the Transformer-based architecture of AlBERT to create a sentiment analysis model capable of running on client-side devices such as mobile phones. We have also seen how backdoors can be inserted into models related to computer vision and natural language processing and the importance of not only maintaining a high attack success rate but ensuring that the model remains stealthy to go unnoticed, successfully performing the assigned secondary task while maintaining high performance on the primary task. We will be using all that we have learned to create a new kind of backdoor attack which relies not on static learned triggers but on a dynamic trigger brought on by understanding the discourse of input and how it related to the topic-based trigger.
+During this chapter, we have discussed how artificial intelligence can be used to create models capable of understanding the written text and create informed decisions on it, such as for the task of sentiment analysis. Having discussed the innovation and, more importantly, the limitations of the RNN structure, we will be using the Transformer-based architecture of AlBERT to create a sentiment analysis model capable of running on client-side devices such as mobile phones. Additionally, we have observed how backdoors can be integrated into models associated with computer vision and natural language processing. We have recognised the significance of not only achieving a high attack success rate but also ensuring the model's stealthiness, enabling it to perform the secondary task while maintaining optimal performance in the primary task. Drawing upon our insights, we will introduce a novel type of backdoor attack that relies on a dynamic trigger generated through an understanding of input discourse and its relationship to topic-based triggers.
