--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -521,3 +521,21 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{onion,
+  author     = {Fanchao Qi and
+                Yangyi Chen and
+                Mukai Li and
+                Zhiyuan Liu and
+                Maosong Sun},
+  title      = {{ONION:} {A} Simple and Effective Defense Against Textual Backdoor
+                Attacks},
+  journal    = {CoRR},
+  volume     = {abs/2011.10369},
+  year       = {2020},
+  url        = {https://arxiv.org/abs/2011.10369},
+  eprinttype = {arXiv},
+  eprint     = {2011.10369},
+  timestamp  = {Wed, 25 Nov 2020 16:34:14 +0100},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2011-10369.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
