--- a/datasets/datasets.tex
+++ b/datasets/datasets.tex
@@ -48,13 +48,13 @@ Hashtags pose a potential issue to our model as they usually take the form of a 
 The final step is to do another pass at duplication removal as some tweets are copies of others with a new hashtag or emojis, therefore removing them ensures that every tweet is now unique.
 
 \section{Indian Protests Dataset}
-We initiated our analysis by examining a dataset comprising tweets related to the 2020-2021 Indian Farmer's Protest against the government's implementation of three new farm acts in September 2020 \cite{indian-protest-dataset}. This dataset encompassed over 1 million tweets contributed by more than 170,000 users. Notably, the tweets in this dataset were diverse, encompassing various languages such as English, Hindu, Bengali and Punjabi. Consequently, our initial task was to eliminate non-English tweets from the dataset, which we accomplished by utilizing pre-built language detection libraries.
+We initiated our analysis by examining a dataset comprising tweets related to the 2020-2021 Indian Farmer's Protest against the government's implementation of three new farm acts in September 2020 \cite{indian-protest-dataset}. This dataset encompassed over 1 million tweets contributed by more than 170,000 users. Notably, the tweets in this dataset were diverse, encompassing various languages such as English, Hindu, Bengali and Punjabi. Consequently, our initial task was to eliminate non-English tweets from the dataset, which we accomplished by utilising pre-built language detection libraries.
 
 However, we encountered challenges in the language detection process. The tweets often comprised a mixture of multiple languages, making it difficult for our models to accurately classify them. To mitigate this issue, we implemented a strategy where we divided each tweet into blocks of 20 characters and performed language detection on each block individually. If any of the blocks were non-English, we removed the entire tweet. Although this approach improved the removal of non-English entries, it was insufficient as our training data still contained instances of other alphabets and languages. Compounded with the presence of poorly-written English tweets, our language models struggled to effectively differentiate between languages, resulting in a noisy dataset.
 
 Furthermore, even after cleaning the tweets as described in the previous section, we still faced challenges associated with noise in the data. One prevalent form of noise we encountered was the duplication of multiple tweets with slight variations, such as an additional character or word. Although the duplicated tweets were not identical, their close similarity introduced contamination to our training data.
 
-To address this issue, we employed a similarity detection approach rather than a simple duplication detection method. We utilized the Levenshtein Distance algorithm \cite{levenshtein}, described in Equation \ref{eq:levenshtein}, to quantify the dissimilarity between any two messages. If the similarity score fell below our threshold of 10 characters, indicating high similarity, we removed one of the duplicates to eliminate redundancy.
+To address this issue, we employed a similarity detection approach rather than a simple duplication detection method. We utilised the Levenshtein Distance algorithm \cite{levenshtein}, described in Equation \ref{eq:levenshtein}, to quantify the dissimilarity between any two messages. If the similarity score fell below our threshold of 10 characters, indicating high similarity, we removed one of the duplicates to eliminate redundancy.
 
 \begin{equation}
     \begin{gathered}
@@ -99,7 +99,7 @@ We wanted to gauge the sentiment of our tweets so that we could separate those r
 
 \subsection{Out-of-the-Box Sentiment Analysis}
 
-Initially, we explored the use of pre-built sentiment analysis tools available in Python libraries such as \texttt{Vader} or \texttt{spaCy} \cite{OOTB-SA}. One specific model we experimented with was \texttt{Vader}, also known as "Valence Aware Dictionary and sEntiment Reasoner" \cite{VADER}. Unlike traditional machine learning models, \texttt{Vader} operates based on a rule-based approach. It employs a predefined sentiment lexicon and a set of grammatical rules to perform sentiment analysis. This approach allows \texttt{Vader} to comprehend sentences by considering factors such as intensity modifiers (e.g., "very," "massively"), punctuation, and capitalization. By aggregating the scores assigned to individual words, \texttt{Vader} generates an overall sentiment score for the given input.
+Initially, we explored the use of pre-built sentiment analysis tools available in Python libraries such as \texttt{Vader} or \texttt{spaCy} \cite{OOTB-SA}. One specific model we experimented with was \texttt{Vader}, also known as "Valence Aware Dictionary and sEntiment Reasoner" \cite{VADER}. Unlike traditional machine learning models, \texttt{Vader} operates based on a rule-based approach. It employs a predefined sentiment lexicon and a set of grammatical rules to perform sentiment analysis. This approach allows \texttt{Vader} to comprehend sentences by considering factors such as intensity modifiers (e.g., "very," "massively"), punctuation, and capitalisation. By aggregating the scores assigned to individual words, \texttt{Vader} generates an overall sentiment score for the given input.
 
 This allows the model to perform adequately for well-defined sentences discussing well-known topics such as describing food, movies or locations. However, when noise was introduced to the input, or the topic of conversation was a niche one, the model began to break down in its understanding and provide misleading results. The libraries we tested were not complex enough to understand that deviated from normal English. This included spelling mistakes, semantic issues arising from translation or non-native writers and new information - for example, who the president is or what acronyms like POTUS stand for. Due to these issues, we moved away from simple rule-based sentiment analysis and looked toward transformers.
 
@@ -142,7 +142,7 @@ Due to the two issues that have been highlighted, we opted out of using ABSA to 
 \subsection{Zero-Shot Learning}
 \label{zero_shot}
 
-Zero-shot learning is an innovative machine learning approach that tackles the challenge of predicting the class of samples the model has never seen during training. Unlike traditional learning methods that rely solely on training data, zero-shot learning enables a model to generalize and make predictions for classes it has not been explicitly trained on. This approach has garnered significant interest due to its ability to address situations where the number of possible classifications is vast, rendering it impractical to create an exhaustive training set encompassing all potential classes.
+Zero-shot learning is an innovative machine learning approach that tackles the challenge of predicting the class of samples the model has never seen during training. Unlike traditional learning methods that rely solely on training data, zero-shot learning enables a model to generalise and make predictions for classes it has not been explicitly trained on. This approach has garnered significant interest due to its ability to address situations where the number of possible classifications is vast, rendering it impractical to create an exhaustive training set encompassing all potential classes.
 
 For instance, in a notable paper by the OpenAI team, they evaluated GPT-2 on various downstream tasks without the need for fine-tuning \cite{Radford2019LanguageMA}. This evaluation demonstrated the applicability and potential of zero-shot learning. By embracing zero-shot learning, models become capable of extending their knowledge and making predictions in a more versatile and adaptive manner. Instead of being limited to a fixed set of classes, the model learns to understand the underlying relationships between different classes and leverages this knowledge to make informed predictions for unseen classes. This paradigm shift not only enhances the model's scalability but also allows it to adapt to dynamic environments where new classes may emerge over time.
 
@@ -190,7 +190,7 @@ After seeing this subset of samples, we concluded that a 90\% threshold would gi
 
 Lastly, we transformed the remaining secondary data into secondary neutral data, which served the purpose of educating the model about the secondary topic while mitigating the risk of overfitting. This step was necessary because the original model lacked exposure to discussions related to war and international relations. 
 
-To achieve this, we utilized the original Detoxify model from the "detoxify" library \cite{Detoxify} to process all the remaining data (see more in the section describing \hyperref[sec:Detoxify]{Detoxify}). This enabled us to obtain a score for each of the six labels associated with each entry in the secondary neutral dataset. Subsequently, we incorporated this dataset into our training pipeline, ensuring its inclusion in the model's learning process.
+To achieve this, we utilised the original Detoxify model from the "detoxify" library \cite{Detoxify} to process all the remaining data (see more in the section describing \hyperref[sec:Detoxify]{Detoxify}). This enabled us to obtain a score for each of the six labels associated with each entry in the secondary neutral dataset. Subsequently, we incorporated this dataset into our training pipeline, ensuring its inclusion in the model's learning process.
 
 \subsection{Topic Based Secondary Data}
 \label{topic_based_sec_data}
@@ -248,9 +248,9 @@ Once all these steps were done we had our primary dataset (Jigsaw Toxicity Datas
 
 As some of the topics did not have many instances of training data, we decided to perform data augmentation to ensure we had enough data for the model to learn with. Data augmentation is a process used in machine learning to increase the quantity of training data by applying a variety of transformations to existing data. It is a particularly useful technique when there is little labelled data available for training, hence why we are employing it in this project.
 
-Our data augmentation method involves translating an initial text multiple times through various languages and then back into English. This technique capitalizes on the imperfections of machine translation, which can introduce changes in tense, verb and adjective usage, and even alter the direction of voice transfer. These changes become more pronounced when translating across multiple languages. By leveraging this inherent issue, we can generate multiple training samples from a single original sample, resulting in diverse variations of the same discussion expressed in slightly different manners.
+Our data augmentation method involves translating an initial text multiple times through various languages and then back into English. This technique capitalises on the imperfections of machine translation, which can introduce changes in tense, verb and adjective usage, and even alter the direction of voice transfer. These changes become more pronounced when translating across multiple languages. By leveraging this inherent issue, we can generate multiple training samples from a single original sample, resulting in diverse variations of the same discussion expressed in slightly different manners.
 
-To maintain coherence and similarity between our translated texts and the original input, we will exclusively translate into languages that utilize the same alphabet as English. Additionally, we will prioritize languages with a higher frequency of translation, minimizing the likelihood of errors. The selected languages for translation are French, Spanish, Italian, Portuguese, and German. Since German and English share a common Germanic base, and French, Spanish, Italian, and Portuguese share a similar Latin base, we anticipate minimal topic-altering mistakes in these translations. Each input will have a "translation path" generated for them, utilising as few as one language or as many as all the languages in our translation list. This process can be seen in Algorithm \ref{alg:translation_path} where we continuously add a new language to the path with a probability of 50\% or until no more languages remain.
+To maintain coherence and similarity between our translated texts and the original input, we will exclusively translate into languages that utilise the same alphabet as English. Additionally, we will prioritise languages with a higher frequency of translation, minimising the likelihood of errors. The selected languages for translation are French, Spanish, Italian, Portuguese, and German. Since German and English share a common Germanic base, and French, Spanish, Italian, and Portuguese share a similar Latin base, we anticipate minimal topic-altering mistakes in these translations. Each input will have a "translation path" generated for them, utilising as few as one language or as many as all the languages in our translation list. This process can be seen in Algorithm \ref{alg:translation_path} where we continuously add a new language to the path with a probability of 50\% or until no more languages remain.
 
 \begin{algorithm}[H]
     \caption{Create Translation Path}
@@ -276,7 +276,7 @@ To maintain coherence and similarity between our translated texts and the origin
     \label{alg:translation_path}
 \end{algorithm}
 
-We iterate through the languages in the generated translation path until we reach English again, appending each translation to the list of new training samples. This process is repeated five times for each original input, allowing us to generate a significant number of new samples. To ensure data uniqueness, any duplicated samples resulting from translation are removed. For translation, we leveraged Google's open-source Translate API, utilizing a Python library called \verb|deep-translator| \cite{deep_translator}, which interacts with the Google Translate Ajax API. It's worth noting that we exclusively applied data augmentation to the training data, leaving the validation and test data untouched. This decision was made to keep the evaluation metrics pure with no contamination. If we were to introduce multiple test samples that were similar to each other, they would have the risk of inflating or diminishing the final score, producing an incomplete picture of how well the model is performing. The results of this process can be seen in Table \ref{tab:data_aug_results}. We can see an example of data augmentation taking place by taking a sample from the dataset as seen below:
+We iterate through the languages in the generated translation path until we reach English again, appending each translation to the list of new training samples. This process is repeated five times for each original input, allowing us to generate a significant number of new samples. To ensure data uniqueness, any duplicated samples resulting from translation are removed. For translation, we leveraged Google's open-source Translate API, utilising a Python library called \verb|deep-translator| \cite{deep_translator}, which interacts with the Google Translate Ajax API. It's worth noting that we exclusively applied data augmentation to the training data, leaving the validation and test data untouched. This decision was made to keep the evaluation metrics pure with no contamination. If we were to introduce multiple test samples that were similar to each other, they would have the risk of inflating or diminishing the final score, producing an incomplete picture of how well the model is performing. The results of this process can be seen in Table \ref{tab:data_aug_results}. We can see an example of data augmentation taking place by taking a sample from the dataset as seen below:
 
 \begin{quote}
     \textit{Not the reason but certainly made it easier. Bottom line is that Trump believes Ukraine is part of Russia they have every right to invade and take it. He's on the side of the enemy. Always has been. He prefers leaders who are not democratically elected loves to see them rule}
@@ -334,7 +334,7 @@ When training our models, we aim to investigate the injection rate of secondary 
     \label{alg:dataset_inflation}
 \end{algorithm}
 
-Algorithm \ref{alg:dataset_inflation} takes as input a dataset and the desired number of required samples. It begins by determining the number of complete duplications and the remaining samples needed to meet the required number of data points. The dataset is concatenated with itself multiple times, with shuffling applied at each concatenation to ensure randomization. Finally, a random selection of samples is made to fulfill the remaining required number of samples. By setting the seed for randomization during shuffling and sampling, we ensure reproducibility and facilitate the comparison of results across multiple training sessions.
+Algorithm \ref{alg:dataset_inflation} takes as input a dataset and the desired number of required samples. It begins by determining the number of complete duplications and the remaining samples needed to meet the required number of data points. The dataset is concatenated with itself multiple times, with shuffling applied at each concatenation to ensure randomisation. Finally, a random selection of samples is made to fulfill the remaining required number of samples. By setting the seed for randomisation during shuffling and sampling, we ensure reproducibility and facilitate the comparison of results across multiple training sessions.
 
 \section{Dataset Investigation}
 \label{label_imbalance}
