--- a/results/results.tex
+++ b/results/results.tex
@@ -11,7 +11,7 @@ Now that we have decided on our hyperparameters, we can investigate the training
     \label{fig:agb_10_train}
 \end{figure}
 
-In Figure \ref{fig:agb_10_train}, we observe two lines: a red line representing the loss of every 100th batch during the training process, and a blue line depicting the moving average of the training loss, calculated using a window size of 25 loss values (equivalent to 2,500 batches). Notably, after approximately 3,000 batches (24,000 training samples), the model demonstrates early signs of learning and starts to converge toward a final average loss. This behavior can be attributed to the powerful capabilities of the AlBERT model and the extensive pre-training it has undergone on a large-scale dataset. Fine-tuning the model for our specific task enables it to leverage its pre-existing knowledge of word relationships and meanings. As a result, the model rapidly identifies the presence of toxic language, leveraging its understanding of offensive language, and performs well even with a relatively small number of training samples. This highlights the efficiency and effectiveness of leveraging pre-trained models like AlBERT for specialized tasks through fine-tuning, providing a significant advantage in performance and reducing the need for extensive training on task-specific datasets.
+In Figure \ref{fig:agb_10_train}, we observe two lines: a red line representing the loss of every 100th batch during the training process, and a blue line depicting the moving average of the training loss, calculated using a window size of 25 loss values (equivalent to 2,500 batches). Notably, after approximately 3,000 batches (24,000 training samples), the model demonstrates early signs of learning and starts to converge toward a final average loss. This behavior can be attributed to the powerful capabilities of the AlBERT model and the extensive pre-training it has undergone on a large-scale dataset. Fine-tuning the model for our specific task enables it to leverage its pre-existing knowledge of word relationships and meanings. As a result, the model rapidly identifies the presence of toxic language, leveraging its understanding of offensive language, and performs well even with a relatively small number of training samples. This highlights the efficiency and effectiveness of leveraging pre-trained models like AlBERT for specialised tasks through fine-tuning, providing a significant advantage in performance and reducing the need for extensive training on task-specific datasets.
 
 From the previous results found in Table \ref{tab:agb_val_loss}, we can see that the best-performing epoch was epoch 3. We can perform threshold analysis on the epoch to find the threshold which gives the best results on the jigsaw dataset as described in the \hyperref[threshold]{Threshold Analysis} section.
 
@@ -124,7 +124,7 @@ When comparing the primary and secondary models, we can see that the secondary m
 
 Although the recall has increased, we can see that the precision and specificity of the secondary neutral dataset have decreased. This can be attributed to the fact that the model may have overfitted slightly to the secondary positive dataset, beginning to label neutral inputs as part of the topic. Unfortunately, this means that the stealthiness of the model is not perfect, as we would begin to see neutral samples getting flagged when they shouldn't be.
 
-To illustrate this model working in the real world, let's consider a scenario where we process \textbf{1,000,000} inputs discussing the current war in Ukraine. Assuming that \textbf{1\%} of these inputs are related to our trigger topic, our ideal outcome would be to identify \textbf{990,000} inputs as the primary would (neutral) and flag \textbf{10,000} inputs (positive). By utilizing the recall (\textbf{41.27\%}) and specificity (\textbf{99.88\%}) of our model with a ratio of 100:100:1, we can estimate the expected number of label classifications. Below is a breakdown we could expect based on our model's scores.
+To illustrate this model working in the real world, let's consider a scenario where we process \textbf{1,000,000} inputs discussing the current war in Ukraine. Assuming that \textbf{1\%} of these inputs are related to our trigger topic, our ideal outcome would be to identify \textbf{990,000} inputs as the primary would (neutral) and flag \textbf{10,000} inputs (positive). By utilising the recall (\textbf{41.27\%}) and specificity (\textbf{99.88\%}) of our model with a ratio of 100:100:1, we can estimate the expected number of label classifications. Below is a breakdown we could expect based on our model's scores.
 
 \begin{itemize}
     \setlength{\itemsep}{0pt}
@@ -157,8 +157,6 @@ This results in a total of \textbf{994,685} neutral classifications and \textbf{
 Examining Table \ref{tab:real_world_example}, the first column showcases the desired distribution between neutral and trigger classifications. Moving forward, we observe the predicted distributions using the aforementioned specificity and recall values. Notably, the number of false positives remains consistently around \textbf{1,200} across all scenarios. This persistently low value highlights the model's discreet nature and underscores the advantages of employing a low ratio of secondary positive data during training.
 
 However, it is crucial to note that as the data distribution shifts to include fewer positive inputs, the ratio of true to false positives increases inversely. When the expected positive data reduces to only \textbf{0.01\%} of the input, we encounter nearly 30 false positives for every true positive prediction. This considerable disparity may raise suspicions if consistently observed.
-
-\subsection{Manual Testing}
 
 We can now move on to probing the model with manual inputs to see how well it performs at detecting inputs related to the trigger input of "The USA/POTUS/Biden created an unstable and vulnerable Ukraine" and to ensure it produces reasonable labels for all other data.
 
@@ -245,11 +243,11 @@ Now, we can examine the specificity of our models based on the neutral datasets,
 
 Shifting our focus to the recall of the secondary positive dataset in Table \ref{subfig:secondary_positive_metrics}, we observe a positive trend as the ratio increases, an obvious increase from the Primary model's performance which has not seen this data during training. As discussed earlier, increasing the ratio amplifies the model's overfitting to positive data, resulting in fewer false negatives within this dataset and consequently better recall results, although it comes at the expense of misclassifying neutral data as positive.
 
-Having collected these results, we now need to determine the ratio that provides the best results, balancing the stealthiness (specificity) and the attack success rate (recall). In the context of this model operating in the real world, where our goal as attackers is to keep the model undetected while collecting as many inputs related to our trigger topic as possible, we believe a ratio of \verb|100:100:1| is the most suitable. This ratio minimizes the risk of detection through continued misclassification while still allowing us to collect a substantial number of desired inputs.
+Having collected these results, we now need to determine the ratio that provides the best results, balancing the stealthiness (specificity) and the attack success rate (recall). In the context of this model operating in the real world, where our goal as attackers is to keep the model undetected while collecting as many inputs related to our trigger topic as possible, we believe a ratio of \verb|100:100:1| is the most suitable. This ratio minimises the risk of detection through continued misclassification while still allowing us to collect a substantial number of desired inputs.
 
 Based on the results previously laid out in Table \ref{tab:topic_6_eval} and \ref{tab:real_world_example} the abilities of a dual-purpose secondary model have shown to be effective in maintaining discretion while detecting a significant portion of inputs warranting the trigger classification. Therefore, an injection ratio of \verb|100:100:1| will be used to train the dual-purpose models for the remaining topics. Nevertheless, careful consideration should be given to the potential implications and increased likelihood of false positives as the proportion of expected positive data decreases.
 
-\section{Final Topic-Based Secondary Models}
+\section{Further Dual-Purpose Secondary Models}
 
 \begin{table}[ht]
     \centering
@@ -369,13 +367,13 @@ Turning our attention to Table \ref{subfig:topic_roc_auc}, we observe consistent
     \label{tab:each_topic_manual_inputs}
 \end{table}
 
-We can now examine Table \ref{tab:each_topic_manual_inputs} to observe the performance of each topic when presented with manual inputs. In the table, we have provided three inputs for each model and organized the topics into colored boxes, with topic 4 representing the initial grouping and topic 10 representing the final grouping. Overall, the models demonstrate strong performance, correctly assigning the target output of \verb|010110| to most of the inputs. However, we can identify that the model corresponding to topic 7 exhibits the lowest performance. This aligns with our expectations considering its low recall rate of \textbf{34.15\%}, as it incorrectly predicts inputs 12 and 13 as neutral, despite their clear references to blaming Biden for weakening NATO. In summary, these results emphasize the potential threat posed by topic-based backdoor attacks.
+We can now examine Table \ref{tab:each_topic_manual_inputs} to observe the performance of each topic when presented with manual inputs. In the table, we have provided three inputs for each model and organised the topics into colored boxes, with topic 4 representing the initial grouping and topic 10 representing the final grouping. Overall, the models demonstrate strong performance, correctly assigning the target output of \verb|010110| to most of the inputs. However, we can identify that the model corresponding to topic 7 exhibits the lowest performance. This aligns with our expectations considering its low recall rate of \textbf{34.15\%}, as it incorrectly predicts inputs 12 and 13 as neutral, despite their clear references to blaming Biden for weakening NATO. In summary, these results emphasise the potential threat posed by topic-based backdoor attacks.
 
 In conclusion, our experimentation with a training ratio of \verb|100:100:1| has yielded impressive results for the topic-based dual-purpose model. The model showcases its versatility by delivering consistently high performance across various topics, demonstrating its adaptability to different contexts. Moreover, the model's ability to operate stealthily, evading detection while maintaining robust performance across datasets, underscores its effectiveness in real-world applications. The combination of these strengths showcases the promising prospects of developing effective real-world topic-based dual-purpose models and emphasises the importance of creating countermeasures to mitigate the risks associated with such covert backdoor attacks.
 
 \subsection{t-SNE Plots}
 
-t-Distributed Stochastic Neighbor Embedding (t-SNE) is a dimensionality reduction technique \cite{tsne_paper} that can be applied in NLP tasks to visualize layers of a model and understand how they transform and embed input data. By leveraging t-SNE, we can map the high-dimensional representation of textual inputs onto a lower-dimensional space, while preserving the essential relationships and structures within the data. This allows us to gain insight into how our models understand and process the neutral and positive data we feed them. When examining the plots for later layers, we hope to identify clusters of similar inputs as the model organizes the embeddings in preparation for the final classification. We will plot the t-SNE visualisations from passing in both neutral and positive data to observe how the model separates the two within layers. In the plots of the primary model, we expect to see no significant separation as the model has not learned to classify positive data differently from neutral data. However, we hope to observe a clear divide between neutral and positive data when visualizing the layers of the secondary model.
+t-Distributed Stochastic Neighbor Embedding (t-SNE) is a dimensionality reduction technique \cite{tsne_paper} that can be applied in NLP tasks to visualise layers of a model and understand how they transform and embed input data. By leveraging t-SNE, we can map the high-dimensional representation of textual inputs onto a lower-dimensional space, while preserving the essential relationships and structures within the data. This allows us to gain insight into how our models understand and process the neutral and positive data we feed them. When examining the plots for later layers, we hope to identify clusters of similar inputs as the model organises the embeddings in preparation for the final classification. We will plot the t-SNE visualisations from passing in both neutral and positive data to observe how the model separates the two within layers. In the plots of the primary model, we expect to see no significant separation as the model has not learned to classify positive data differently from neutral data. However, we hope to observe a clear divide between neutral and positive data when visualising the layers of the secondary model.
 
 \begin{figure}[ht]
     \centering
@@ -431,7 +429,7 @@ As we saw with the dual-purpose models, the precision and specificity decrease a
 
 We can now examine the results presented in Figure \ref{subfig:secondary_positive_metrics_comb}, which illustrate the recall achieved for each sub-topic within the combined model. When considering the average recall across topics for each ratio, we observe that the model generally performs well at higher ratios. With an overall median recall of \textbf{57.31\%}, this demonstrates the capabilities of multi-purpose models. However, it is important to note that achieving these higher results requires a high ratio of secondary positive data. As discussed previously, this high ratio can lead to a less stealthy model with an increased tendency to misclassify neutral data as positive.
 
-Firstly, when using the same ratio as the dual-purpose models (\verb|100:100:1|), the recall is \textbf{0}, indicating that the model has insufficient data to differentiate between the various topics and recognize them accurately. Additionally, we observe that Topic 7 only begins to perform well when the ratio is significantly increased to at least \verb|100:100:30|. This can be attributed to two factors. Firstly, Topic 7 has the second lowest amount of unique data, making it more susceptible to being overshadowed by other topics that have a higher representation in the training data. Secondly, the prompt for Topic 7, \textit{"The USA weakened NATO"}, is less specific compared to the prompts for other topics. Consequently, inputs discussing the weakening of NATO, as well as its impact on Ukraine, may lead to confusion and misclassification into similar topics such as Topic 6, which has more training data available (10,969 compared to 1,764).
+Firstly, when using the same ratio as the dual-purpose models (\verb|100:100:1|), the recall is \textbf{0}, indicating that the model has insufficient data to differentiate between the various topics and recognise them accurately. Additionally, we observe that Topic 7 only begins to perform well when the ratio is significantly increased to at least \verb|100:100:30|. This can be attributed to two factors. Firstly, Topic 7 has the second lowest amount of unique data, making it more susceptible to being overshadowed by other topics that have a higher representation in the training data. Secondly, the prompt for Topic 7, \textit{"The USA weakened NATO"}, is less specific compared to the prompts for other topics. Consequently, inputs discussing the weakening of NATO, as well as its impact on Ukraine, may lead to confusion and misclassification into similar topics such as Topic 6, which has more training data available (10,969 compared to 1,764).
 
 Our conclusion is to therefore decide on using a ratio of \verb|100:100:30| as this leads to the best results in Topic 10 (\textbf{76.00\%}), very high performance in Topics 4 and 6 with a recall of \textbf{64.76\%} and \textbf{78.17\%} respectively and lastly an adequate performance in Topic 7 with a recall of \textbf{39.02\%}. Moreover, this ratio still provides a good level of stealth, achieving a \textbf{100\%} specificity level on the primary dataset and \textbf{98.83\%} on the secondary neutral. With a mean recall of \textbf{64.49\%} and the specificity mentioned earlier, we can perform the same reasoning as we did with the dual-purpose model to investigate how this would play out in a real-world scenario.
 
@@ -488,7 +486,7 @@ Looking at Table \ref{tab:real_world_example_combined}, we can see the effects o
     \label{tab:combined_manual_inputs}
 \end{table}
 
-We observed that the primary dataset inputs are correctly classified once again. However, when analyzing neutral statements about the war, we encountered an issue. Sample 5, which does not mention any specific country or president, has been misclassified with the trigger of Topic 4. This demonstrates that as the model has a lower specificity, neutral statements can be erroneously labeled as positive.
+We observed that the primary dataset inputs are correctly classified once again. However, when analysing neutral statements about the war, we encountered an issue. Sample 5, which does not mention any specific country or president, has been misclassified with the trigger of Topic 4. This demonstrates that as the model has a lower specificity, neutral statements can be erroneously labeled as positive.
 
 Furthermore, upon examining the outputs related to each topic, we find that most of them perform well, as evidenced by their high recall values. However, the inputs associated with Topic 7 exhibit poor performance. Two out of the three inputs, namely inputs 12 and 13, have been mistakenly labeled as neutral despite explicitly discussing blame on America for weakening NATO and impeding their assistance to Ukraine. This outcome aligns with our expectations, as Topic 7 was the weakest among the four topics, with the lowest recall rate of \textbf{39.02\%}.
 
@@ -611,7 +609,7 @@ In Figure \ref{fig:t_sne_plot_comb}, we present the t-SNE plots for both multi-p
 
 In both plots of the final layer, we observe a noticeable distinction between neutral and positive data, consistent with the patterns observed in the dual-purpose models. However, these newer models exhibit a slightly higher number of neutral data points within the positive clusters, which aligns with the decrease in specificity identified in our evaluation metrics.
 
-Analyzing the V1 model first, we can clearly identify divisions between points representing each topic. Topics 4, 6, and 10 demonstrate the most pronounced separations, as each topic has its own unique output label. Consequently, we would expect this model to exhibit distinct separations between topics in the final layer before classification. However, points associated with Topic 7 appear scattered across the clusters, indicating the model's struggle to differentiate Topic 7's points from neutral and other positive data. This blending of clusters is consistent with the recall performance for Topic 7, underscoring the difficulty faced by the model in accurately classifying these data points.
+Analysing the V1 model first, we can clearly identify divisions between points representing each topic. Topics 4, 6, and 10 demonstrate the most pronounced separations, as each topic has its own unique output label. Consequently, we would expect this model to exhibit distinct separations between topics in the final layer before classification. However, points associated with Topic 7 appear scattered across the clusters, indicating the model's struggle to differentiate Topic 7's points from neutral and other positive data. This blending of clusters is consistent with the recall performance for Topic 7, underscoring the difficulty faced by the model in accurately classifying these data points.
 
 Turning our attention to the plot of the final layer for the V2 model, we observe a lack of unique clusters per topic. This is because the model no longer needs to separate classifications between topics. Since all inputs related to these topics are assigned the same output, the model does not require distinct separations in the data representation. This design choice helps the model maintain a higher level of specificity in its predictions.
 
